[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/bgScroll.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://ships/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/enemySpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://ships/player/Player.gd" type="Script" id=5]
[ext_resource path="res://ships/enemies/enemy1.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Backgrounds/blue.png" type="Texture" id=7]
[ext_resource path="res://assets/PNG/Meteors/meteorBrown_small1.png" type="Texture" id=8]
[ext_resource path="res://assets/PNG/Meteors/meteorBrown_big2.png" type="Texture" id=9]
[ext_resource path="res://GameStage/gameStage.gd" type="Script" id=10]

[node name="gameStage" type="Node2D"]
pause_mode = 1
script = ExtResource( 10 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1600, 900 )

[node name="background1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1600, 900 )

[node name="meteor1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 767, 105 )
texture = ExtResource( 8 )

[node name="meteor2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 245, 307 )
texture = ExtResource( 9 )

[node name="TileMap" type="TileMap" parent="ParallaxBackground"]
format = 1

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 502, 486 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 69

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="enemySpawner" parent="." instance=ExtResource( 4 )]

[node name="enemy1" parent="enemySpawner" instance=ExtResource( 6 )]
position = Vector2( 297, -72 )

[node name="enemy2" parent="enemySpawner" instance=ExtResource( 6 )]
position = Vector2( 346, -319 )

[node name="enemy3" parent="enemySpawner" instance=ExtResource( 6 )]
position = Vector2( 667, -170 )

[node name="Score" type="Label" parent="."]
margin_left = 6.0
margin_top = 540.0
margin_right = 156.0
margin_bottom = 594.0
text = "SCORE: 0"
align = 1

[node name="Health" type="Label" parent="."]
margin_left = -4.0
margin_top = 559.0
margin_right = 164.0
margin_bottom = 577.0
text = "HEALTH: 100"
align = 1

[connection signal="area_entered" from="Player" to="Player" method="_on_Player_area_entered"]
[connection signal="minus_health" from="Player" to="." method="health"]
[connection signal="spawn_player_laser" from="Player" to="." method="_on_Player_spawn_player_laser"]
[connection signal="add_score" from="enemySpawner" to="." method="score"]
[connection signal="spawn_enemy_laser" from="enemySpawner/enemy1" to="." method="_on_enemy1_spawn_enemy_laser"]
[connection signal="spawn_enemy_laser" from="enemySpawner/enemy2" to="." method="_on_enemy1_spawn_enemy_laser"]
[connection signal="spawn_enemy_laser" from="enemySpawner/enemy3" to="." method="_on_enemy1_spawn_enemy_laser"]
